formatted cost by income graph. added legend to ethnicity graph but cant fix label overlap. need to use stems but dont know how

--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,6 @@ body {
   background-color: #282c34;
 }
 
-/* .graph {
-  display: flex;
-  align-items: center;
-  max-width: 50%;
-} */
-
 .App {
   text-align: center;
 }
